--- a/.env.example
+++ b/.env.example
@@ -11,15 +11,9 @@ JWT_EXPIRE=7d
 JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-this-in-production
 JWT_REFRESH_EXPIRE=30d
 
-# Email (for notifications)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASSWORD=your-app-password
-
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:3000
 
-# File Upload
-MAX_FILE_SIZE=5242880
-UPLOAD_PATH=./uploads
+GOOGLE_APPLICATION_CREDENTIALS=""
+GCS_PROJECT_ID=""
+GCS_BUCKET_NAME=""
